--- a/notebooks/vaccine_clinic_model4.ipynb
+++ b/notebooks/vaccine_clinic_model4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "everyday-isaac",
+   "id": "second-terror",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "behind-comparison",
+   "id": "enhanced-holiday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "utility-boring",
+   "id": "rural-flesh",
    "metadata": {},
    "source": [
     "### Possible improvements\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anticipated-selling",
+   "id": "technological-strategy",
    "metadata": {},
    "source": [
     "## Model 3: The vaccine clinic model - version 0.01\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-swedish",
+   "id": "purple-haiti",
    "metadata": {},
    "source": [
     "### Creating the simulation environment\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "moving-sport",
+   "id": "varying-kitty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "laughing-architecture",
+   "id": "black-poultry",
    "metadata": {},
    "source": [
     "Now create general function to define the sequence of steps traversed by patients. We'll also capture a bunch of timestamps to make it easy to compute various system performance measures such as patient waiting times, queue sizes and resource utilization."
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "nominated-marshall",
+   "id": "roman-rubber",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forward-young",
+   "id": "silver-exemption",
    "metadata": {},
    "source": [
     "Now create a function that runs the clinic for a specified number of hours.\n",
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "consecutive-trance",
+   "id": "naughty-absence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "moved-island",
+   "id": "numeric-princess",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "organizational-surgeon",
+   "id": "innocent-entity",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -3979,7 +3979,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interesting-virtue",
+   "id": "brave-fourth",
    "metadata": {},
    "source": [
     "## Redesign for easier use\n",
@@ -4012,7 +4012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "simplified-basketball",
+   "id": "least-toner",
    "metadata": {},
    "source": [
     "## Creating a config file for input parameters (and creating a CLI)\n",
@@ -4024,7 +4024,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-kingdom",
+   "id": "affecting-decline",
    "metadata": {},
    "source": [
     "### Basic handling of command line arguments (learning about `argv`)\n",
@@ -4037,7 +4037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executed-february",
+   "id": "cathedral-darkness",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4045,7 +4045,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "closing-return",
+   "id": "optimum-member",
    "metadata": {},
    "outputs": [
     {
@@ -4062,7 +4062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "inside-syndicate",
+   "id": "black-distributor",
    "metadata": {},
    "source": [
     "Let's create a small program that takes a few command line arguments and just repeats them back when the program is run. Here's what the program looks like. I've saved it as `echo_args.py`. We'll interpret the command line arguments as follows:\n",
@@ -4079,7 +4079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "planned-medium",
+   "id": "alpha-girlfriend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4098,7 +4098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-removal",
+   "id": "greek-coaching",
    "metadata": {},
    "source": [
     "If you've forgotten what the purpose of the following is:\n",
@@ -4115,7 +4115,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fewer-country",
+   "id": "hawaiian-moldova",
    "metadata": {},
    "outputs": [
     {
@@ -4139,7 +4139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "careful-preview",
+   "id": "bright-jewelry",
    "metadata": {},
    "source": [
     "So, `sys.argv` is a list of the command line arguments passed in to `echo_args.py`. Note that `sys.argv[0]` is just the name of the program itself, including the relative path from this working directory to the program file. At this point, our program doesn't do any checking of the presence or validity of the input arguments. It just prints back out whatever values we input on the command line. If all of these arguments were required, we could add a check like this:"
@@ -4148,7 +4148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "durable-checklist",
+   "id": "modern-advice",
    "metadata": {
     "tags": []
    },
@@ -4174,7 +4174,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "motivated-packaging",
+   "id": "engaged-raise",
    "metadata": {
     "tags": []
    },
@@ -4195,7 +4195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-receiver",
+   "id": "sacred-trademark",
    "metadata": {},
    "source": [
     "The example above is highly simplified and the world of command line arguments and command line processing, known as *argument parsing*, is much richer than this. Not only do we have *arguments* such as in this example, we also might have *options* (also called *flags*). In the pcda class we saw this when using things like the `ls` command:\n",
@@ -4210,7 +4210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "digital-spoke",
+   "id": "frank-opening",
    "metadata": {},
    "source": [
     "Before checking out argument parsing tools, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -4228,7 +4228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comparative-mining",
+   "id": "better-christian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4268,7 +4268,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ruled-mechanism",
+   "id": "provincial-instruction",
    "metadata": {},
    "outputs": [
     {
@@ -4285,7 +4285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developing-sister",
+   "id": "regional-express",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -4294,7 +4294,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "suspected-collectible",
+   "id": "minus-husband",
    "metadata": {},
    "outputs": [
     {
@@ -4312,7 +4312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rapid-covering",
+   "id": "listed-aggregate",
    "metadata": {},
    "source": [
     "#### Learning more about command line arguments\n",
@@ -4323,7 +4323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interior-press",
+   "id": "stock-premium",
    "metadata": {},
    "source": [
     "### Tools for argument parsing and building CLI's."
@@ -4331,7 +4331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "israeli-nitrogen",
+   "id": "athletic-healthcare",
    "metadata": {},
    "source": [
     "Clearly, it is going to be (potentially) difficult to deal with all the complexity of command line *argument parsing* manually by checking all the values in the `sys.argv` list. Thankfully, there are numerous tools for doing command line argument parsing and helping us create command line interfaces for our Python programs. Some of these tools include:\n",
@@ -4349,7 +4349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-microphone",
+   "id": "empirical-breach",
    "metadata": {},
    "source": [
     "Before checking out `argparse`, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -4367,7 +4367,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "terminal-witch",
+   "id": "elementary-council",
    "metadata": {},
    "outputs": [
     {
@@ -4415,7 +4415,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "average-fifteen",
+   "id": "soviet-crossing",
    "metadata": {},
    "outputs": [
     {
@@ -4433,7 +4433,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "available-indianapolis",
+   "id": "casual-value",
    "metadata": {},
    "outputs": [
     {
@@ -4450,7 +4450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-dairy",
+   "id": "extended-section",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -4459,7 +4459,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "rocky-vietnamese",
+   "id": "minute-microphone",
    "metadata": {},
    "outputs": [
     {
@@ -4477,7 +4477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-passenger",
+   "id": "acoustic-indiana",
    "metadata": {},
    "source": [
     "### Creating a CLI with argparse"
@@ -4485,10 +4485,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-right",
+   "id": "living-husband",
    "metadata": {},
    "source": [
-    "https://realpython.com/command-line-interfaces-python-argparse/"
+    "https://realpython.com/command-line-interfaces-python-argparse/\n",
+    "\n",
+    "https://realpython.com/python-main-function/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abandoned-turtle",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_command_line(argv=None):\n",
+    "    \"\"\"\n",
+    "    Parse command line arguments\n",
+    "    \n",
+    "    `argv` is a list of arguments, or `None` for ``sys.argv[1:]``.\n",
+    "    Return a Namespace representing the argument list.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # If argv is empty, get the argument list from sys.argv.\n",
+    "    if argv is None:\n",
+    "        argv = sys.argv[1:]\n",
+    "\n",
+    "    # Create the parser\n",
+    "    parser = argparse.ArgumentParser(prog='vaccine_clinic_model4',\n",
+    "                                     description='Run vaccine clinic simulation')\n",
+    "\n",
+    "    # Add arguments\n",
+    "    parser.add_argument(\"patient_arrival_rate\", help=\"patients per hour\",\n",
+    "                        type=float)\n",
+    "\n",
+    "    parser.add_argument(\"num_greeters\", help=\"number of greeters\",\n",
+    "                        type=int)\n",
+    "\n",
+    "    parser.add_argument(\"num_reg_staff\", help=\"number of registration staff\",\n",
+    "                        type=int)\n",
+    "\n",
+    "    parser.add_argument(\"num_vaccinators\", help=\"number of vaccinators\",\n",
+    "                        type=int)\n",
+    "\n",
+    "    parser.add_argument(\"num_schedulers\", help=\"number of schedulers\",\n",
+    "                        type=int)\n",
+    "\n",
+    "    parser.add_argument(\n",
+    "        \"--scenario\", type=str, default=datetime.now().strftime(\"%Y.%m.%d.%H.%M.\"),\n",
+    "        help=\"Prepended to output filenames.\"\n",
+    "    )\n",
+    "\n",
+    "    parser.add_argument(\"--pct_need_second_dose\", default=0.5,\n",
+    "                        help=\"percent of patients needing 2nd dose (default = 0.5)\",\n",
+    "                        type=float)\n",
+    "\n",
+    "    parser.add_argument(\"--stoptime\", default=600, help=\"time that simulation stops (default = 600)\",\n",
+    "                        type=float)\n",
+    "\n",
+    "    parser.add_argument(\n",
+    "        \"--output-path\", type=str, default=\"\", help=\"location for output file writing\")\n",
+    "\n",
+    "    parser.add_argument(\"--quiet\", action='store_true',\n",
+    "                        help=\"If True, suppresses output messages (default=False\")\n",
+    "\n",
+    "    # do the parsing\n",
+    "    args = parser.parse_args()\n",
+    "    return args"
    ]
   }
  ],
