--- a/notebooks/vaccine_clinic_model4.ipynb
+++ b/notebooks/vaccine_clinic_model4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f0e4fe75",
+   "id": "f20abd5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,26 +19,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c195251",
+   "id": "a96317f5",
    "metadata": {},
    "source": [
     "## Improving our initial vaccine clinic model\n",
     "\n",
     "Now that we have a rough first model working, let's think about some possible improvements. There are many as we've taken numerous shortcuts to get this model working.\n",
     "\n",
-    "* Specifying the global sim inputs through configuration files\n",
+    "* Specifying the global sim inputs through a command line interface (CLI)\n",
     "* Getting rid of hard coded processing time distributions\n",
     "* Having ability to choose between pure random walk-in arrivals and scheduled arrivals\n",
     "* Multiple replications and/or steady state analysis\n",
-    "* Detailed logging\n",
-    "* Statistical summaries based on timestamp data [roughly done]\n",
-    "* CLI for running\n",
-    "* Animation\n"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fce45bed",
+   "id": "d77cc7ed",
    "metadata": {},
    "source": [
     "## Redesign for easier use\n",
@@ -62,7 +59,7 @@
     "\n",
     "### Moving code from Jupyter notebook to a Python script\n",
     "\n",
-    "As our code grows, working inside a Jupyter notebook becomes less practical. It's fine for testing out little code snippets, but the production code should be in a `.py` file and we should use an IDE for further development. I've already used the Jupyter notebook export feature to export Model 3 to `vaccine_clinic_model4.py` that we'll use as the basis for further development.\n",
+    "As our code grows, working inside a Jupyter notebook becomes less practical. It's fine for testing out little code snippets, but the production code should be in a `.py` file and we should use an IDE for further development. \n",
     "\n",
     "### Adding a command line interface\n",
     "\n",
@@ -71,17 +68,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f73094",
+   "id": "c924e62c",
    "metadata": {},
    "source": [
-    "## Creating a config file for input parameters (and creating a CLI)\n",
+    "## Creating a CLI and using config files\n",
     "\n",
     "These two enhancements are actually related and we'll address them together. Instead of hard coding input parameter values into our code, we could store them in a simple configuration file. Before getting into configuration files, we need to step back and review passing command line arguments to Python scripts."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f4b87d0",
+   "id": "24882f58",
    "metadata": {},
    "source": [
     "### Basic handling of command line arguments (learning about `argv`)\n",
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a7d3c1",
+   "id": "ae832cd3",
    "metadata": {},
    "source": [
     "Let's create a small program that takes a few command line arguments and just repeats them back when the program is run. Here's what the program looks like. I've saved it as `echo_args.py`. We'll interpret the command line arguments as follows:\n",
@@ -110,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d30411",
+   "id": "d0837280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8b13586b",
+   "id": "e9437cea",
    "metadata": {},
    "outputs": [
     {
@@ -150,12 +147,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d2c695",
+   "id": "e3c73ce8",
    "metadata": {},
    "source": [
     "If you've forgotten what the purpose of the following is:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "if __name__ == '__main__':\n",
     "```\n",
     "\n",
@@ -167,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b8495dc4",
+   "id": "78ea2f50",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "986671f0",
+   "id": "46f5c37c",
    "metadata": {},
    "source": [
     "So, `sys.argv` is a list of the command line arguments passed in to `echo_args.py`. Note that `sys.argv[0]` is just the name of the program itself, including the relative path from this working directory to the program file. At this point, our program doesn't do any checking of the presence or validity of the input arguments. It just prints back out whatever values we input on the command line. If all of these arguments were required, we could add a check like this:"
@@ -200,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3d7f558",
+   "id": "eb60aaf1",
    "metadata": {
     "tags": []
    },
@@ -239,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a04bee9",
+   "id": "6386e9d8",
    "metadata": {
     "tags": []
    },
@@ -260,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e3bb323",
+   "id": "753d9972",
    "metadata": {},
    "source": [
     "The example above is highly simplified and the world of command line arguments and command line processing, known as *argument parsing*, is much richer than this. Not only do we have *arguments* such as in this example, we also might have *options* (also called *flags*). In the pcda class we saw this when using things like the `ls` command:\n",
@@ -275,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0b3292",
+   "id": "48e2c4e9",
    "metadata": {},
    "source": [
     "Before checking out argument parsing tools, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -293,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "904386ff",
+   "id": "9bc72ac8",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8935acda",
+   "id": "190fc759",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb651cd5",
+   "id": "b712abac",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -367,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "565a490e",
+   "id": "05d97aab",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de402796",
+   "id": "20e80a28",
    "metadata": {},
    "source": [
     "#### Learning more about command line arguments\n",
@@ -396,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7a4c68c",
+   "id": "020ebeb2",
    "metadata": {},
    "source": [
     "### Tools for argument parsing and building CLI's."
@@ -404,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64227f89",
+   "id": "ccb5d9d3",
    "metadata": {},
    "source": [
     "Clearly, it is going to be (potentially) difficult to deal with all the complexity of command line *argument parsing* manually by checking all the values in the `sys.argv` list. Thankfully, there are numerous tools for doing command line argument parsing and helping us create command line interfaces for our Python programs. Some of these tools include:\n",
@@ -422,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aff5f4d",
+   "id": "a676ca65",
    "metadata": {},
    "source": [
     "### Creating a CLI with argparse\n",
@@ -433,45 +430,152 @@
     "3. Add arguments of the desired types to the parser\n",
     "4. Use it by calling the `arg_parse` method of the parser object\n",
     "\n",
-    "After calling `arg_parse` you'll get what is known as a [Namespace object](https://docs.python.org/dev/library/argparse.html#argparse.Namespace).\n",
+    "After calling `arg_parse` you'll get what is known as a [Namespace object](https://docs.python.org/dev/library/argparse.html#argparse.Namespace). \n",
     "\n",
-    "I rewrote the `echo_args.py` example using argparse. You can find it in `echo_args_argparse.py`. It just prints out `args` (the Namespace object) and `vars(args)` which gives a dictionary version of the arguments and their values."
+    "I rewrote the `echo_args.py` example using argparse. You can find it in `echo_args_argparse.py`. It just prints out `args` (the Namespace object) and `vars(args)` which gives a dictionary version of the arguments and their values. To access in an individual item, say 'iat', in `args`, you just use `args.iat`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7e541af7",
+   "execution_count": 27,
+   "id": "0a8e38e3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "args.iat:  3.0\n",
       "args:  Namespace(greet=2, iat=3.0, reg=4, sched=4, vacc=15)\n",
       "vars(args): {'iat': 3.0, 'greet': 2, 'reg': 4, 'vacc': 15, 'sched': 4}\n"
      ]
     }
    ],
    "source": [
-    "!python ../src/vaccine_clinic/test_argparse.py --iat 3.0 --greet 2 --reg 4 --vacc 15 --sched 4"
+    "!python ../src/vaccine_clinic/echo_args_argparse.py --iat 3.0 --greet 2 --reg 4 --vacc 15 --sched 4"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dd861dc0",
+   "id": "6f7dac06",
    "metadata": {},
    "source": [
-    "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in the `vaccine_clinic_model4.py`. "
+    "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in `vaccine_clinic_model4.py`. You should create a new PyCharm project based on the existing vaccine clinic project folder (the one containing `setup.py`). I'm going to show you my project and describe a few additions I made to the CLI\n",
+    "\n",
+    "* added a `--scenario` argument (str, default=current datetime) that gets appended to output filenames to make it easier to organize ouputs for different scenarios\n",
+    "* added a `--pct_need_second_dose` argument (float, default=0.5)\n",
+    "* added a `--stoptime` argument (float, default=600)\n",
+    "* added a `--num_reps` argument (int, default=1) to be able to do multiple replications\n",
+    "* added a `--seed` argument (int, default=3) for random number generator\n",
+    "* added a `--output_path` argument (str, default='', i.e. current folder)\n",
+    "* added a `--quiet` argument (boolean, default=False) that if True will suppress output messages"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fce4cbf7",
+   "id": "a87ff7a1",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b3bc922",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54dfc1fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee956276",
+   "metadata": {},
+   "source": [
+    "## Multiple replications and/or steady state analysis\n",
+    "Since our clinic opens and closes every day, it is technically known as a *terminating simulation*. For such simulations, we would usually run them multiple times to generate independent samples of our performance metrics (patient wait times, resource utilizations, ...). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8b893472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_cols = 10\n",
+    "start = [-2, -1]\n",
+    "new_col_order = start.extend([_ for _ in range(0, num_cols-2)])\n",
+    "print(new_col_order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e7d83be1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[_ for _ in range(0, num_cols-2)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "507d913b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start.extend([0, 1, 2, 3, 4, 5, 6, 7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0f7ab7ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start"
+   ]
   }
  ],
  "metadata": {
