added numerous input arguments to get rid of all hard coding of params

--- a/notebooks/vaccine_clinic_model4.ipynb
+++ b/notebooks/vaccine_clinic_model4.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f20abd5e",
+   "id": "1f779db1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96317f5",
+   "id": "eb65f335",
    "metadata": {},
    "source": [
     "## Improving our initial vaccine clinic model\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d77cc7ed",
+   "id": "03ce70de",
    "metadata": {},
    "source": [
     "## Redesign for easier use\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c924e62c",
+   "id": "e9cc0817",
    "metadata": {},
    "source": [
     "## Creating a CLI and using config files\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24882f58",
+   "id": "188485bd",
    "metadata": {},
    "source": [
     "### Basic handling of command line arguments (learning about `argv`)\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae832cd3",
+   "id": "7562b333",
    "metadata": {},
    "source": [
     "Let's create a small program that takes a few command line arguments and just repeats them back when the program is run. Here's what the program looks like. I've saved it as `echo_args.py`. We'll interpret the command line arguments as follows:\n",
@@ -106,10 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0837280",
+   "execution_count": 1,
+   "id": "d8a3fb67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command line args: ['C:\\\\Users\\\\isken\\\\Anaconda3\\\\envs\\\\aap\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\isken\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-3947d945-823f-4453-a5f5-981d9df42dd8.json']\n",
+      "\n",
+      "sys.argv[0]: C:\\Users\\isken\\Anaconda3\\envs\\aap\\lib\\site-packages\\ipykernel_launcher.py\n",
+      "sys.argv[1]: -f\n",
+      "sys.argv[2]: C:\\Users\\isken\\AppData\\Roaming\\jupyter\\runtime\\kernel-3947d945-823f-4453-a5f5-981d9df42dd8.json\n"
+     ]
+    }
+   ],
    "source": [
     "# echo_args.py\n",
     "import sys\n",
@@ -126,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e9437cea",
+   "execution_count": 2,
+   "id": "490744ac",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +148,7 @@
        "'__main__'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c73ce8",
+   "id": "d46f1250",
    "metadata": {},
    "source": [
     "If you've forgotten what the purpose of the following is:\n",
@@ -163,8 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "78ea2f50",
+   "execution_count": 3,
+   "id": "60016f6e",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f5c37c",
+   "id": "f81e81f5",
    "metadata": {},
    "source": [
     "So, `sys.argv` is a list of the command line arguments passed in to `echo_args.py`. Note that `sys.argv[0]` is just the name of the program itself, including the relative path from this working directory to the program file. At this point, our program doesn't do any checking of the presence or validity of the input arguments. It just prints back out whatever values we input on the command line. If all of these arguments were required, we could add a check like this:"
@@ -196,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "eb60aaf1",
+   "execution_count": 4,
+   "id": "222ff95f",
    "metadata": {
     "tags": []
    },
@@ -206,12 +218,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Command line args: ['C:\\\\Users\\\\isken\\\\Anaconda3\\\\envs\\\\aap\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\isken\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-012eae39-d6c6-4fff-9e76-b5148246eb6a.json']\n",
+      "Command line args: ['C:\\\\Users\\\\isken\\\\Anaconda3\\\\envs\\\\aap\\\\lib\\\\site-packages\\\\ipykernel_launcher.py', '-f', 'C:\\\\Users\\\\isken\\\\AppData\\\\Roaming\\\\jupyter\\\\runtime\\\\kernel-3947d945-823f-4453-a5f5-981d9df42dd8.json']\n",
       "\n",
       "Five args required, only 2 specified.\n",
       "sys.argv[0]: C:\\Users\\isken\\Anaconda3\\envs\\aap\\lib\\site-packages\\ipykernel_launcher.py\n",
       "sys.argv[1]: -f\n",
-      "sys.argv[2]: C:\\Users\\isken\\AppData\\Roaming\\jupyter\\runtime\\kernel-012eae39-d6c6-4fff-9e76-b5148246eb6a.json\n"
+      "sys.argv[2]: C:\\Users\\isken\\AppData\\Roaming\\jupyter\\runtime\\kernel-3947d945-823f-4453-a5f5-981d9df42dd8.json\n"
      ]
     }
    ],
@@ -235,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6386e9d8",
+   "execution_count": 5,
+   "id": "95601310",
    "metadata": {
     "tags": []
    },
@@ -257,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753d9972",
+   "id": "55a37a26",
    "metadata": {},
    "source": [
     "The example above is highly simplified and the world of command line arguments and command line processing, known as *argument parsing*, is much richer than this. Not only do we have *arguments* such as in this example, we also might have *options* (also called *flags*). In the pcda class we saw this when using things like the `ls` command:\n",
@@ -272,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48e2c4e9",
+   "id": "ae695b1e",
    "metadata": {},
    "source": [
     "Before checking out argument parsing tools, let's do it ourselves for the following simple case. Let's assume we just want the following command line options. They can be in any order but each must be followed by a numeric value for that option. So,\n",
@@ -289,8 +301,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9bc72ac8",
+   "execution_count": 6,
+   "id": "0ed43ed1",
    "metadata": {},
    "outputs": [
     {
@@ -337,8 +349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "190fc759",
+   "execution_count": 7,
+   "id": "307586a6",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b712abac",
+   "id": "1ada0d83",
    "metadata": {},
    "source": [
     "Here we change the order and include one bad option."
@@ -363,8 +375,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "05d97aab",
+   "execution_count": 8,
+   "id": "71741a91",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20e80a28",
+   "id": "0c75ad20",
    "metadata": {},
    "source": [
     "#### Learning more about command line arguments\n",
@@ -393,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "020ebeb2",
+   "id": "7e2482b4",
    "metadata": {},
    "source": [
     "### Tools for argument parsing and building CLI's."
@@ -401,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccb5d9d3",
+   "id": "ceb7cd3b",
    "metadata": {},
    "source": [
     "Clearly, it is going to be (potentially) difficult to deal with all the complexity of command line *argument parsing* manually by checking all the values in the `sys.argv` list. Thankfully, there are numerous tools for doing command line argument parsing and helping us create command line interfaces for our Python programs. Some of these tools include:\n",
@@ -419,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a676ca65",
+   "id": "e22b41ef",
    "metadata": {},
    "source": [
     "### Creating a CLI with argparse\n",
@@ -430,15 +442,15 @@
     "3. Add arguments of the desired types to the parser\n",
     "4. Use it by calling the `arg_parse` method of the parser object\n",
     "\n",
-    "After calling `arg_parse` you'll get what is known as a [Namespace object](https://docs.python.org/dev/library/argparse.html#argparse.Namespace). \n",
+    "After calling `arg_parse` you'll get what is known as a [Namespace object](https://docs.python.org/dev/library/argparse.html#argparse.Namespace) with attributes corresponding to the input arguments.\n",
     "\n",
     "I rewrote the `echo_args.py` example using argparse. You can find it in `echo_args_argparse.py`. It just prints out `args` (the Namespace object) and `vars(args)` which gives a dictionary version of the arguments and their values. To access in an individual item, say 'iat', in `args`, you just use `args.iat`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "0a8e38e3",
+   "execution_count": 9,
+   "id": "ef669f1a",
    "metadata": {},
    "outputs": [
     {
@@ -457,124 +469,172 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7dac06",
+   "id": "2cdcc99c",
    "metadata": {},
    "source": [
-    "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in `vaccine_clinic_model4.py`. You should create a new PyCharm project based on the existing vaccine clinic project folder (the one containing `setup.py`). I'm going to show you my project and describe a few additions I made to the CLI\n",
+    "Now that we've got a basic grasp of creating a simple CLI, we will do all further development on this model in `vaccine_clinic_model4.py`. You should create a new PyCharm project based on the existing vaccine clinic project folder (the one containing `setup.py`). I'm going to show you my project and describe a few additions I made to the CLI. I added a whole bunch of inputs to eliminate all of the hard coding of parameters that are first model version contained. Instead of typing stuff, here's the results from running the program with the `--help` argument:\n",
     "\n",
-    "* added a `--scenario` argument (str, default=current datetime) that gets appended to output filenames to make it easier to organize ouputs for different scenarios\n",
-    "* added a `--pct_need_second_dose` argument (float, default=0.5)\n",
-    "* added a `--stoptime` argument (float, default=600)\n",
-    "* added a `--num_reps` argument (int, default=1) to be able to do multiple replications\n",
-    "* added a `--seed` argument (int, default=3) for random number generator\n",
-    "* added a `--output_path` argument (str, default='', i.e. current folder)\n",
-    "* added a `--quiet` argument (boolean, default=False) that if True will suppress output messages"
+    "```python\n",
+    "python vaccine_clinic_model4.py --help\n",
+    "```\n",
+    "```\n",
+    "usage: vaccine_clinic_model4 [-h] [--config CONFIG]\n",
+    "                             [--patient_arrival_rate PATIENT_ARRIVAL_RATE]\n",
+    "                             [--num_greeters NUM_GREETERS]\n",
+    "                             [--num_reg_staff NUM_REG_STAFF]\n",
+    "                             [--num_vaccinators NUM_VACCINATORS]\n",
+    "                             [--num_schedulers NUM_SCHEDULERS]\n",
+    "                             [--pct_need_second_dose PCT_NEED_SECOND_DOSE]\n",
+    "                             [--temp_check_time_mean TEMP_CHECK_TIME_MEAN]\n",
+    "                             [--temp_check_time_sd TEMP_CHECK_TIME_SD]\n",
+    "                             [--reg_time_mean REG_TIME_MEAN]\n",
+    "                             [--vaccinate_time_mean VACCINATE_TIME_MEAN]\n",
+    "                             [--vaccinate_time_sd VACCINATE_TIME_SD]\n",
+    "                             [--obs_time OBS_TIME]\n",
+    "                             [--sched_time_mean SCHED_TIME_MEAN]\n",
+    "                             [--sched_time_sd SCHED_TIME_SD]\n",
+    "                             [--scenario SCENARIO] [--stoptime STOPTIME]\n",
+    "                             [--num_reps NUM_REPS] [--seed SEED]\n",
+    "                             [--output_path OUTPUT_PATH] [--quiet]\n",
+    "\n",
+    "Run vaccine clinic simulation\n",
+    "\n",
+    "optional arguments:\n",
+    "  -h, --help            show this help message and exit\n",
+    "  --config CONFIG       Configuration file containing input parameter\n",
+    "                        arguments and values\n",
+    "  --patient_arrival_rate PATIENT_ARRIVAL_RATE\n",
+    "                        patients per hour\n",
+    "  --num_greeters NUM_GREETERS\n",
+    "                        number of greeters\n",
+    "  --num_reg_staff NUM_REG_STAFF\n",
+    "                        number of registration staff\n",
+    "  --num_vaccinators NUM_VACCINATORS\n",
+    "                        number of vaccinators\n",
+    "  --num_schedulers NUM_SCHEDULERS\n",
+    "                        number of schedulers\n",
+    "  --pct_need_second_dose PCT_NEED_SECOND_DOSE\n",
+    "                        percent of patients needing 2nd dose (default = 0.5)\n",
+    "  --temp_check_time_mean TEMP_CHECK_TIME_MEAN\n",
+    "                        Mean time (mins) for temperature check (default =\n",
+    "                        0.25)\n",
+    "  --temp_check_time_sd TEMP_CHECK_TIME_SD\n",
+    "                        Standard deviation time (mins) for temperature check\n",
+    "                        (default = 0.05)\n",
+    "  --reg_time_mean REG_TIME_MEAN\n",
+    "                        Mean time (mins) for registration (default = 1.0)\n",
+    "  --vaccinate_time_mean VACCINATE_TIME_MEAN\n",
+    "                        Mean time (mins) for vaccination (default = 4.0)\n",
+    "  --vaccinate_time_sd VACCINATE_TIME_SD\n",
+    "                        Standard deviation time (mins) for vaccination\n",
+    "                        (default = 0.5)\n",
+    "  --obs_time OBS_TIME   Time (minutes) patient waits post-vaccination in\n",
+    "                        observation area (default = 15.0)\n",
+    "  --post_obs_time_mean POST_OBS_TIME _MEAN  Time (minutes) patient waits beyond OBS_TIME in\n",
+    "                        observation area (default = 1.0)\n",
+    "  --sched_time_mean SCHED_TIME_MEAN\n",
+    "                        Mean time (mins) for scheduling 2nd dose (default =\n",
+    "                        1.0)\n",
+    "  --sched_time_sd SCHED_TIME_SD\n",
+    "                        Standard deviation time (mins) for scheduling 2nd dose\n",
+    "                        (default = 0.1)\n",
+    "  --scenario SCENARIO   Appended to output filenames.\n",
+    "  --stoptime STOPTIME   time that simulation stops (default = 600)\n",
+    "  --num_reps NUM_REPS   number of simulation replications (default = 1)\n",
+    "  --seed SEED           random number generator seed (default = 3)\n",
+    "  --output_path OUTPUT_PATH\n",
+    "                        location for output file writing\n",
+    "  --quiet               If True, suppresses output messages (default=False\n",
+    "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a87ff7a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b3bc922",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "54dfc1fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ee956276",
+   "id": "98b456cb",
    "metadata": {},
    "source": [
-    "## Multiple replications and/or steady state analysis\n",
-    "Since our clinic opens and closes every day, it is technically known as a *terminating simulation*. For such simulations, we would usually run them multiple times to generate independent samples of our performance metrics (patient wait times, resource utilizations, ...). "
+    "Yikes, that's a lot of inputs. Obviously we don't want to be typing those on the command line. Instead, as you'll see soon, we'll read them from a *config* file - just a text file that lists the argument names and their values. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5a486e7",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "--patient_arrival_rate 180\n",
+    "--num_greeters 4\n",
+    "--num_reg_staff 4\n",
+    "--num_vaccinators 15\n",
+    "--num_schedulers 4\n",
+    "--scenario base\n",
+    "--pct_need_second_dose 0.5\n",
+    "--temp_check_time_mean 0.25\n",
+    "--temp_check_time_sd 0.05\n",
+    "--reg_time_mean 1.0\n",
+    "--vaccinate_time_mean 4.0\n",
+    "--vaccinate_time_sd 0.5\n",
+    "--sched_time_mean 1.0\n",
+    "--sched_time_sd 0.1\n",
+    "--obs_time 15.0\n",
+    "--post_obs_time_mean 1.0\n",
+    "--stoptime 600\n",
+    "--num_reps 1\n",
+    "--seed 4470\n",
+    "--output_path output\n",
+    "--quiet True\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b37f5f18",
+   "metadata": {},
+   "source": [
+    "In addition, I created a little driver program to call the `simulate` function and pass it a dictionary containing all of the input argument values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "8b893472",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "num_cols = 10\n",
-    "start = [-2, -1]\n",
-    "new_col_order = start.extend([_ for _ in range(0, num_cols-2)])\n",
-    "print(new_col_order)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "e7d83be1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[_ for _ in range(0, num_cols-2)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "507d913b",
+   "execution_count": null,
+   "id": "d5089ee0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "start.extend([0, 1, 2, 3, 4, 5, 6, 7])"
+    "from vaccine_clinic_model4 import simulate\n",
+    "\n",
+    "args = {'patient_arrival_rate': 180,\n",
+    "        'num_greeters': 4,\n",
+    "        'num_reg_staff': 4,\n",
+    "        'num_vaccinators': 15,\n",
+    "        'num_schedulers': 4,\n",
+    "        'scenario': 'base',\n",
+    "        'pct_need_second_dose': 0.50,\n",
+    "        'temp_check_time_mean': 0.25,\n",
+    "        'temp_check_time_sd': 0.05,\n",
+    "        'reg_time_mean': 1.0,\n",
+    "        'vaccinate_time_mean': 4.0,\n",
+    "        'vaccinate_time_sd': 0.5,\n",
+    "        'sched_time_mean': 1.00,\n",
+    "        'sched_time_sd': 0.10,\n",
+    "        'obs_time': 15.0,\n",
+    "        'stoptime': 600,\n",
+    "        'num_reps': 1,\n",
+    "        'seed': 4470,\n",
+    "        'output_path': 'output',\n",
+    "        'quiet': True}\n",
+    "\n",
+    "num_reps = args['num_reps']\n",
+    "for i in range(1, num_reps + 1):\n",
+    "    simulate(args, i)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "0f7ab7ec",
+   "cell_type": "markdown",
+   "id": "d8f7e915",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 0, 1, 2, 3, 4, 5, 6, 7]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "start"
+    "Ok, let's go look at the Python script version of `vaccine_clinic_model4.py`. Obviously, it's in the `src/vaccine_clinic/` folder."
    ]
   }
  ],
